(L<Bug #240|http://bricolage.lighthouseapp.com/projects/29601-bricolage/tickets/240>).
[David]

=item *

Deleting an output channel or category from a story or media document no
longer causes the Notes, Trail, Bulk Edit, and Diff/View buttons to stop
working. Thanks to Michael Herring for the report
(L<Bug #281|http://bricolage.lighthouseapp.com/projects/29601-bricolage/tickets/281>).
[David]

=back

=head1 Version 2.0.1 (2011-02-09)

=head2 Improvements

=over

=item *

Added C<SKIP_SSL_REDIRECT> F<bricolage.conf> directive. This directive
prevents Bricolage from redirecting to and from an SSL URL when C<SSL_ENABLE>
is turned on. The case for this is when Bricolage is running behind a reverse
proxy server that's handling SSL mappings. Thanks to Alex Krohn for the
report. [David]

=item *

Added the "object" format for datetime values. Pass "object" as the formatting
string and a L<DateTime> object will be returned, rather than a string.
[David]

=item *

Refactored the SFTP mover to do proper error handling. Also removed the code
that "escapes" file names, as with more recent versions of Net::SSH2 it left
the backslashes in the file names. [David]

=item *

Bricolage now supports Apache 2 MPMs other than Prefork. YMMV (Bug #188).
[David]

=item *

The "Category" autocompleting field in the New Story/Media/Template profile
now remembers the last value selected for that screen within the current
session. This makes it one bit easier to create a bunch of objects in a row
all in the same category, as used to be the case before 2.0 turned these into
autocompleting fields (Bug #159). [David]

=item *

The lists of the container and field subelement key names in a template are
now displayed above the code in the read view as well as the edit view.
Suggested by Phillip Smith (Bug #228). [David]

=item *

Added the C<asset_counts()> method to L<Bric::Biz::Workflow::Parts::Desk> and
put it to use providing the desk counts in the side navigation. This provides