@@ -98,6 +98,12 @@ working. Thanks to Michael Herring for the report
 (L<Bug #281|http://bricolage.lighthouseapp.com/projects/29601-bricolage/tickets/281>).
 [David]
 
+=item *
+
+Drag and drop of elements now works on IE 9 Thanks to Nick Legg for the report
+(L<Bug #250|http://bricolage.lighthouseapp.com/projects/29601-bricolage/tickets/250>).
+[David]
+
 =back
 
 =head1 Version 2.0.1 (2011-02-09)
